@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997--2013  The R Core Team
+ *  Copyright (C) 1997--2014  The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -1704,7 +1704,7 @@ static SEXP EncodeVars(SEXP formula)
 /* encoded by dummy variables.  This is decided using */
 /* the heuristic described in Statistical Models in S, page 38. */
 
-static int TermCode(SEXP termlist, SEXP thisterm, int whichbit, SEXP term)
+static int TermCode(SEXP termlist, SEXP thisterm, int whichbit, SEXP term, int intercept)
 {
     SEXP t;
     int allzero, i;
@@ -1729,7 +1729,19 @@ static int TermCode(SEXP termlist, SEXP thisterm, int whichbit, SEXP term)
         }
     }
     if (allzero)
-        return 1;
+    {
+        /* This indicates that we have a main effect term.  We want a 1
+           if there is an intercept in the model, or if it is not the
+           first term in the formula. See PR#16070.  Remember
+           that terms are sorted by bitcount... */
+        if (intercept)
+            return 1;
+        t = termlist;
+        for (i = 0; i < nwords; i++)
+            if (INTEGER(CAR(t))[i] != INTEGER(CAR(thisterm))[i])
+                return 1;
+        return 2;
+    }
 
     for (t = termlist; t != thisterm; t = CDR(t))
     {
@@ -1987,7 +1999,7 @@ SEXP termsform(SEXP args)
             for (i = 1; i <= nvar; i++)
             {
                 if (GetBit(CAR(call), i))
-                    INTEGER(pattern)[i - 1 + n * nvar] = TermCode(formula, call, i, term);
+                    INTEGER(pattern)[i - 1 + n * nvar] = TermCode(formula, call, i, term, intercept);
             }
             n++;
         }
